[package]
name = "my_ether_tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = "2.0.7"
# Ethers' async features rely upon the Tokio async runtime.
tokio = { version = "1.29.1", features = ["full"] }
# Flexible concrete Error Reporting type built on std::error::Error with customizable Reports
eyre = "0.6.8"
